[package]
name = "bak9"
description = "Keep your $HOME safe: A rotational backup system for workstation users"
authors = ["Asmov LLC <development.pub@asmov.software>"]
version = "0.1.0"
edition = "2021"

[dependencies]
bak9-os = { path = "../os" }
chrono = "0"
cron = "0"
hostname = "0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0"
validator = { version = "0", features = ["derive"] }
shellexpand = "2"
colored = "2"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"

[dev-dependencies]
function_name = "0"
asmov-testing = { path = "../../common/testing" }
lazy_static = "1.4.0"
dir-diff = "0.3.3"
regex = "1.10.5"
strip-ansi-escapes = "0.2.0"
