[package]
name = "bak9-mobile-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0", features = ["csr"] }
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
web-sys = "0"
js-sys = "0"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0"
console_error_panic_hook = "0"
