[package]
name = "bak9ui"
version = "0.1.0"
description = "Rotational backups for users and their data"
authors = ["Asmov LLC"]
edition = "2021"

[lib]
name = "bak9ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

