[package]
name = "bak9-mobile"
version = "0.1.0"
description = "Keep your $HOME safe: Monitor rotational backups of your workstations"
authors = ["Asmov LLC <development.pub@asmov.software>"]
edition = "2021"

[lib]
name = "bak9_mobile_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

