[package]
name = "bak9ui"
version = "0.1.0"
description = "Keep your $HOME safe: A rotational backup system for workstation users"
authors = ["Asmov LLC <development.pub@asmov.software>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

